# src/routes/contacts.js
@@ -1,9 +1,9 @@
 const router = require("express").Router();
 const contacts_controller = require("./../controllers/contacts.js");
 
-router.get("/all", contacts_controller.getAllContacts);
+router.get("/", contacts_controller.getAllContacts);
 router.get("/:id", contacts_controller.getContact);
-router.post("/new", contacts_controller.createContact);
+router.post("/", contacts_controller.createContact);
 router.delete("/:id", contacts_controller.deleteContact);
 router.put("/:id", contacts_controller.updateContact);
 
